# sortalgorythms

./: CMakeLists.txt  main.c  sort.c  sort.h
include/: arrayFunctions.c  arrayFunctions.h
